@@ -18,6 +18,24 @@ Jetty is a modern fully async web server that has a long history as a component 
 
 - [https://projects.eclipse.org/projects/rt.jetty](https://projects.eclipse.org/projects/rt.jetty)
 
+Webapp Example
+--------------
+```shell
+$ mkdir base && cd base
+$ java -jar $JETTY_HOME/start.jar --add-modules=http,deploy
+$ cp ~/src/myproj/target/mywebapp.war webapps
+$ java -jar $JETTY_HOME/start.jar 
+```
+
+Embedded Example
+----------------
+```java
+Server server = new Server(port);
+ServletContextHandler context = new ServletContextHandler(server, "/");
+context.addServlet(MyServlet.class, "/*");
+server.start();
+```
+
 Documentation
 -------------
 
@@ -34,7 +52,7 @@ To build, use:
   mvn clean install
 ```
 
-The Jetty distribution will be built in `jetty-distribution/target/distribution`.
+Eclipse Jetty will be built in `jetty-home/target/jetty-home`.
 
 The first build may take a longer than expected as Maven downloads all the dependencies.
 
