@@ -1,16 +1,11 @@
 //
 // ========================================================================
-// Copyright (c) 1995-2020 Mort Bay Consulting Pty Ltd and others.
+// Copyright (c) 1995-2022 Mort Bay Consulting Pty Ltd and others.
 //
-// This program and the accompanying materials are made available under
-// the terms of the Eclipse Public License 2.0 which is available at
-// https://www.eclipse.org/legal/epl-2.0
-//
-// This Source Code may also be made available under the following
-// Secondary Licenses when the conditions for such availability set
-// forth in the Eclipse Public License, v. 2.0 are satisfied:
-// the Apache License v2.0 which is available at
-// https://www.apache.org/licenses/LICENSE-2.0
+// This program and the accompanying materials are made available under the
+// terms of the Eclipse Public License v. 2.0 which is available at
+// https://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
+// which is available at https://www.apache.org/licenses/LICENSE-2.0.
 //
 // SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 // ========================================================================
@@ -20,10 +15,10 @@ package org.eclipse.jetty.start;
 
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -75,7 +70,10 @@ public class Modules implements Iterable<Module>
             Path deprecatedPath = _baseHome.getPath("modules/deprecated.properties");
             if (deprecatedPath != null && FS.exists(deprecatedPath))
             {
-                _deprecated.load(new FileInputStream(deprecatedPath.toFile()));
+                try (FileInputStream inputStream = new FileInputStream(deprecatedPath.toFile()))
+                {
+                    _deprecated.load(inputStream);
+                }
             }
         }
         catch (IOException e)
@@ -84,7 +82,7 @@ public class Modules implements Iterable<Module>
         }
     }
 
-    public void showModules(List<String> modules)
+    public void showModules(PrintStream out, List<String> modules)
     {
         Stream<Module> stream = (modules.contains("*") || modules.isEmpty())
             ? _modules.stream().sorted()
@@ -98,20 +96,20 @@ public class Modules implements Iterable<Module>
             String label;
             Set<String> provides = module.getProvides();
             provides.remove(module.getName());
-            System.out.printf("%n     Module: %s %s%n", module.getName(), provides.size() > 0 ? provides : "");
+            out.printf("%n     Module: %s %s%n", module.getName(), provides.size() > 0 ? provides : "");
             for (String description : module.getDescription())
             {
-                System.out.printf("           : %s%n", description);
+                out.printf("           : %s%n", description);
             }
             if (!module.getTags().isEmpty())
             {
                 label = "       Tags: %s";
                 for (String t : module.getTags())
                 {
-                    System.out.printf(label, t);
+                    out.printf(label, t);
                     label = ", %s";
                 }
-                System.out.println();
+                out.println();
             }
             if (!module.getDepends().isEmpty())
             {
@@ -119,53 +117,65 @@ public class Modules implements Iterable<Module>
                 for (String parent : module.getDepends())
                 {
                     parent = Module.normalizeModuleName(parent);
-                    System.out.printf(label, parent);
+                    out.printf(label, parent);
                     if (Module.isConditionalDependency(parent))
-                        System.out.print(" [conditional]");
+                        out.print(" [conditional]");
                     label = ", %s";
                 }
-                System.out.println();
+                out.println();
             }
-            if (!module.getOptional().isEmpty())
+            if (!module.getBefore().isEmpty())
             {
-                label = "   Optional: %s";
-                for (String parent : module.getOptional())
+                label = "     Before: %s";
+                for (String before : module.getBefore())
                 {
-                    System.out.printf(label, parent);
+                    out.printf(label, before);
                     label = ", %s";
                 }
-                System.out.println();
+                out.println();
+            }
+            if (!module.getAfter().isEmpty())
+            {
+                label = "      After: %s";
+                for (String after : module.getAfter())
+                {
+                    out.printf(label, after);
+                    label = ", %s";
+                }
+                out.println();
             }
             for (String lib : module.getLibs())
             {
-                System.out.printf("        LIB: %s%n", lib);
+                out.printf("        LIB: %s%n", lib);
             }
             for (String xml : module.getXmls())
             {
-                System.out.printf("        XML: %s%n", xml);
+                out.printf("        XML: %s%n", xml);
             }
             for (String jpms : module.getJPMS())
             {
-                System.out.printf("        JPMS: %s%n", jpms);
+                out.printf("        JPMS: %s%n", jpms);
             }
             for (String jvm : module.getJvmArgs())
             {
-                System.out.printf("        JVM: %s%n", jvm);
+                out.printf("        JVM: %s%n", jvm);
             }
             if (module.isEnabled())
             {
                 for (String selection : module.getEnableSources())
                 {
-                    System.out.printf("    Enabled: %s%n", selection);
+                    out.printf("    Enabled: %s%n", selection);
                 }
             }
         });
     }
 
-    public void listModules(List<String> tags)
+    public void listModules(PrintStream out, List<String> tags)
     {
         if (tags.contains("-*"))
             return;
+
+        tags = new ArrayList<>(tags);
 
         boolean wild = tags.contains("*");
         Set<String> included = new HashSet<>();
@@ -179,7 +189,7 @@ public class Modules implements Iterable<Module>
             excluded.add("internal");
 
         Predicate<Module> filter = m -> (included.isEmpty() || m.getTags().stream().anyMatch(included::contains)) &&
-            !m.getTags().stream().anyMatch(excluded::contains);
+            m.getTags().stream().noneMatch(excluded::contains);
 
         Optional<Integer> max = _modules.stream().filter(filter).map(Module::getName).map(String::length).max(Integer::compareTo);
         if (max.isEmpty())
@@ -193,35 +203,37 @@ public class Modules implements Iterable<Module>
             if (!wild && !module.getPrimaryTag().equals(tag.get()))
             {
                 tag.set(module.getPrimaryTag());
-                System.out.printf("%n%s modules:", module.getPrimaryTag());
-                System.out.printf("%n%s---------%n", "-".repeat(module.getPrimaryTag().length()));
+                out.printf("%n%s modules:", module.getPrimaryTag());
+                out.printf("%n%s---------%n", "-".repeat(module.getPrimaryTag().length()));
             }
 
             List<String> description = module.getDescription();
-            System.out.printf(format, module.getName(), description != null && description.size() > 0 ? description.get(0) : "");
+            out.printf(format, module.getName(), description != null && description.size() > 0 ? description.get(0) : "");
         });
     }
 
-    public void listEnabled()
+    public void listEnabled(PrintStream out)
     {
-        System.out.println();
-        System.out.println("Enabled Modules:");
-        System.out.println("----------------");
+        out.println();
+        out.println("Enabled Modules:");
+        out.println("----------------");
 
         int i = 0;
         List<Module> enabled = getEnabled();
         for (Module module : enabled)
         {
-            String name = module.getName();
             String index = (i++) + ")";
+            String name = module.getName();
+            if (!module.getDeprecated().isEmpty())
+                name += " (deprecated)";
             for (String s : module.getEnableSources())
             {
-                System.out.printf("  %4s %-15s %s%n", index, name, s);
+                out.printf("%4s %-25s %s%n", index, name, s);
                 index = "";
                 name = "";
             }
             if (module.isTransitive() && module.hasIniTemplate())
-                System.out.printf("                       init template available with --add-module=%s%n", module.getName());
+                out.printf(" ".repeat(31) + "ini template available with --add-module=%s%n", module.getName());
         }
     }
 
@@ -313,14 +325,22 @@ public class Modules implements Iterable<Module>
 
                 Set<Module> provided = _provided.get(name);
                 if (provided != null)
+                {
                     for (Module p : provided)
                     {
                         if (p.isEnabled())
                             sort.addDependency(module, p);
                     }
+                }
             };
             module.getDepends().forEach(add);
-            module.getOptional().forEach(add);
+            module.getAfter().forEach(add);
+            module.getBefore().forEach(name ->
+            {
+                Module before = _names.get(name);
+                if (before != null && before.isEnabled())
+                    sort.addDependency(before, module);
+            });
         }
 
         sort.sort(enabled);
@@ -342,13 +362,21 @@ public class Modules implements Iterable<Module>
 
                 Set<Module> provided = _provided.get(name);
                 if (provided != null)
+                {
                     for (Module p : provided)
                     {
                         sort.addDependency(module, p);
                     }
+                }
             };
             module.getDepends().forEach(add);
-            module.getOptional().forEach(add);
+            module.getAfter().forEach(add);
+            module.getBefore().forEach(name ->
+            {
+                Module before = _names.get(name);
+                if (before != null)
+                    sort.addDependency(before, module);
+            });
         }
 
         sort.sort(all);
@@ -367,7 +395,6 @@ public class Modules implements Iterable<Module>
                 order.add(name);
             }
         }
-
         return order;
     }
 
@@ -397,6 +424,13 @@ public class Modules implements Iterable<Module>
         {
             StartLog.debug("Already enabled [%s] from %s", module.getName(), module.getEnableSources());
             return;
+        }
+
+        List<String> deprecated = module.getDeprecated();
+        if (!deprecated.isEmpty())
+        {
+            String reason = deprecated.stream().collect(Collectors.joining(System.lineSeparator()));
+            StartLog.warn(reason);
         }
 
         // Check that this is not already provided by another module!
@@ -529,7 +563,7 @@ public class Modules implements Iterable<Module>
         Set<Module> providers = _provided.get(name);
         StartLog.debug("Providers of [%s] are %s", name, providers);
         if (providers == null || providers.isEmpty())
-            return Collections.emptySet();
+            return Set.of();
 
         providers = new HashSet<>(providers);
 
